<resources>
    <string name="app_name">SGC</string>
    <string name="title_activity_maps">Map</string>
    <string name="track">Recorrido:</string>
    <string name="waiting_for_location">Esperando la información del sensor</string>
    <string name="location_notification">Distancia total: %1$s m</string>
    <string name="accuracy_message">Alerta! Error de precisión de +/- %1$s m</string>
    <string name="accuracy_cat_message">Esperando mejor recepción del GPS</string>
    <string name="location_notification_accuracy">\u00A0(precisión +/- %1$s m)</string>
    <string name="stop">Detener recorrido</string>
    <string name="new_track_question">Deseas iniciar un nuevo recorrido?</string>
    <string name="save_track_question">Deseas completar y guardar el recorrido?</string>
    <string name="send_map_question">Deseas enviar la tarea con el mapa?</string>
    <string name="end_send_task">Deseas enviar la tarea finalizada?</string>
    <string name="end_send_task_data">Deseas enviar la información de la tarea?</string>
    <string name="log_out_question">Deseas cerrar sesión?</string>
    <string name="save_predio_potencial_question">Deseas guardar el punto como predio potencial?</string>
    <string name="action_dialog_title">Selecciona una opción</string>
    <string name="missing_execution_map">Primero debes realizar la medición</string>
    <string name="missing_contractor_form">Primero debes llenar el formulario de contratista</string>
    <string name="missing_sampling_forms">Primero debes llenar uno o mas formularios de muestreo</string>
    <string name="missing_erosive_process_forms">Primero debes llenar uno o mas formularios de procesos erosivos</string>
    <string name="missing_minuta_photos">Primero debes tomar el registro fotográfico de la minuta</string>
    <string name="missing_meeting_with_actors_form">Primero debes llenar el formulario</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="save">Guardar</string>
    <string name="take_photo">Tomar fotografía</string>
    <string name="query_list_skip_offset">%1$s,%2$s</string>
    <string name="bottom_navigation_left">Mapa</string>
    <string name="bottom_navigation_mid">Recorridos</string>
    <string name="saved_point">El punto ha sido agregado al mapa</string>
    <string name="saved_feature">La acción ha sido guardada</string>
    <string name="no_predio_porencial_info">Ingresa toda la información</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="log_in">Ingresar</string>
    <string name="invalid_username">Ingresa un usuario válido</string>
    <string name="invalid_password">Ingresa una contraseña válida</string>
    <string name="pending_tasks">Tareas por realizar</string>
    <string name="done_tasks">Tareas realizadas</string>
    <string name="predio_capture">Captura de predio</string>
    <string name="execution_task">Tarea de ejecución</string>
    <string name="predio_creation">Creacion de predio</string>
    <string name="monitor_and_maintenance">Monitoreo</string>
    <string name="view_more">Ver más</string>
    <string name="dashboard">Dashboard</string>
    <string name="tasks">Tareas</string>
    <string name="prqs">PQRS</string>
    <string name="project_tasks">Predio %1$s</string>
    <string name="status">Estado</string>
    <string name="assigned_to">Responsable</string>
    <string name="projects">Procedimientos</string>
    <string name="procedure">Procedimiento </string>
    <string name="predio_potencial">Predio potencial</string>
    <string name="next_Step">Siguiente</string>
    <string name="send_survey">Enviar encuesta</string>
    <string name="send_email">Enviar Email</string>
    <string name="send">Enviar</string>
    <string name="sendto">Enviar a</string>
    <string name="photo_capture">Tomar foto</string>
    <string name="monthly_target">Cuota del mes</string>
    <string name="potential_properties">Predios potenciales</string>
    <string name="progress_value">%1$s \%%</string>
    <string name="add_property">Crear predio</string>
    <string name="map_actions">Tipo de acción</string>
    <string name="map_materials">Tipo de material</string>
    <string name="map_practice">Tipo de buena práctica</string>
    <string name="action_type_question">¿Que tipo de captura desea realizar?</string>
    <string name="send_survey_success">La tarea se ha enviado correctamente</string>
    <string name="saved_siembra_details_success">El detalle de siembras ha sido guardado</string>
    <string name="saved_sampling_point_form_success">El formulario ha sido guardado</string>
    <string name="send_map_success">La tarea se ha enviado correctamente</string>
    <string name="send_map_success_from_task">El mapa se ha enviado correctamente</string>
    <string name="send_predio_potencial_success">El predio potencial se ha enviado correctamente</string>
    <string name="sent_survey_predio_potencial_success">La encuesta se ha enviado correctamente</string>
    <string name="send_monitor_maintenance_success">Envío exitoso</string>
    <string name="send_map">Enviar mapa</string>
    <string name="send_task">Finalizar tarea</string>
    <string name="send_task_data">Enviar datos de la tarea</string>
    <string name="send_monitor">Enviar monitoreo</string>
    <string name="missing_features_message">Agrega al menos un recorrido</string>
    <string name="empty_feature_message">La geometría no tiene puntos aún</string>
    <string name="missing_points_message">Agrega al menos un comentario</string>
    <string name="cant_send_task_message">Debes tener conectividad para poder enviar</string>
    <string name="task_data_sent">La información ha sido enviada</string>
    <string name="missing_remote_id">El predio aún no tiene un identificador único</string>
    <string name="cant_send_monitor_maintenance_message">Debes tener conectividad para poder enviar el monitoreo o mantenimiento</string>
    <string name="due_tasks">Tareas por vencer</string>
    <string name="last_projects">Procedimientos</string>
    <string name="from_date">Desde</string>
    <string name="to_date">Hasta</string>
    <string name="predio_potencial_notification_title">Predios potenciales</string>
    <string name="predios_potenciales_notification_message">Se han enviado %1$s predios potenciales</string>
    <string name="predio_potencial_notification_message">Se ha enviado 1 predio potencial</string>
    <string name="predio_potencial_missing_name">Ingresa el nombre del predio</string>
    <string name="predio_potencial_missing_location">Enciende el gps y valida el campo ubicación</string>
    <string name="on_time">A tiempo</string>
    <string name="delayed">Retraso</string>
    <string name="accionId">accionId</string>
    <string name="comment_dialog_title">Escribe el comentario para este punto en el mapa</string>
    <string name="photo_dialog_title">Escribe el comentario para esta foto</string>
    <string name="feature_dialog_title">Escribe el comentario</string>
    <string name="save_comment">Guardar comentario</string>
    <string name="monitor_maintenance_dialog_title">Información sobre el punto</string>
    <string name="white_color">#FFFFFF</string>
    <string name="tree_marker_color">#B5EF8A</string>
    <string name="feature_comment_title">Comentario: %1$s</string>
    <string name="form_notification_title">Formulario</string>
    <string name="stard_forms_notification_message">Se han enviado %1$s mantenimientos STARD</string>
    <string name="stard_form_notification_message">Se ha enviado 1 mantenimiento STARD</string>
    <string name="vegetal_maintenances_notification_message">Se han enviado %1$s mantenimientos vegetales</string>
    <string name="vegetal_maintenance_notification_message">Se ha enviado 1 mantenimiento vegetal</string>
    <string name="predio_follow_ups_notification_message">Se han enviado %1$s mantenimientos vegetales</string>
    <string name="predio_follow_up_notification_message">Se ha enviado 1 mantenimiento vegetal</string>
    <string name="predio_cartas_intencion_notification_message">Se han enviado %1$s cartas de intención</string>
    <string name="predio_carta_intencion_notification_message">Se ha enviado 1 carta de intencion</string>
    <string name="monitor_and_maintenance_notification_title">Mantenimientos / Monitoreos</string>
    <string name="monitor_and_maintenances_notification_message">Se han enviado %1$s mantenimientos o monitoreos</string>
    <string name="monitor_and_maintenance_notification_message">Se ha enviado 1 mantenimiento o monitoreo</string>
    <string name="pqrs_notification_title">PQRS</string>
    <string name="pqrs_notification_message">Se han enviado %1$s pqrs</string>
    <string name="do_task">Ejecutar tarea</string>
    <string name="photos_registry">Registro fotográfico</string>
    <string name="end_task">Finalizar tarea</string>
    <string name="settings">Configuración</string>
    <string name="offline_mode">Modo sin conexión</string>
    <string name="offline_mode_download">Descargar datos sin conexión</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="data_capture">Capturar datos</string>
    <string name="point_comment">Comentar la ubicación actual</string>
    <string name="end">Finalizar</string>
    <string name="pause">Pausar</string>
    <string name="resume">Continuar medición</string>
    <string name="cant_pause">Solo los recorridos se pueden pausar</string>
    <string name="requires_stard_sheet_form">Debes completar el formulario: Ficha Sistemas de Tratamiento</string>
    <string name="requires_maintenance_control_form">Debes completar el formulario: Control de Mantenimientos</string>
    <string name="selected_data">Dato seleccionado: %1$s</string>
    <string name="data_type">Tipo: %1$s</string>
    <string name="success_offline_data">Se han descargado los datos sin conexión</string>
    <string name="predio_potencial_tasks">Nuevo Predio Potencial</string>
    <string name="create_survey">Diligenciar encuesta</string>
    <string name="create_intention">Diligenciar carta de intención</string>
    <string name="potential_predios">Ver predios</string>
    <string name="predios">Predios Potenciales</string>
    <string name="send_predio_documents">Enviar documentos</string>
    <string name="cant_send_predio_documents">Solo se pueden enviar los documentos con conexión</string>
    <string name="add_tree">Agregar árbol</string>
    <string name="active_tracking">Captura de coordenadas activa</string>
    <string name="sampling_point">Punto de muestreo</string>
    <string name="add_sampling_point">Agregar punto de muestreo</string>
    <string name="send_predio">Enviar predio potencial</string>
    <string name="send_survey_carta_success">El predio ha sido enviado</string>
    <string name="form_type_number">number</string>
</resources>
